# python-eveonline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  workflow.yml
docs/: authentication.md  endpoints.md  error-handling.md  index.md  quickstart.md
examples/: demo.py
scripts/: fetch_esi_token_ci.py  get_esi_refresh_token.py
src/eveonline/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_client_authenticated.py  test_client_public.py  test_const.py  test_etag_caching.py  test_exceptions.py  test_models.py
tests/integration/: __init__.py  test_live_esi.py
