[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "python-eveonline"
version = "0.1.0"
description = "Async Python client for the Eve Online ESI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ronald van der Meer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/ronaldvdmeer/python-eveonline"
Repository = "https://github.com/ronaldvdmeer/python-eveonline"
Issues = "https://github.com/ronaldvdmeer/python-eveonline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eveonline = ["py.typed"]
